<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:layout_margin="20dp">

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textCapWords"
        android:textSize="30sp"
        android:ems="10"
        android:id="@+id/goal_title"
        android:hint="@string/goal_title_hint" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textSize="30sp"
        android:ems="10"
        android:id="@+id/for_who"
        android:hint="@string/for_who_hint"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:textSize="30sp"
        android:ems="10"
        android:id="@+id/goal_description"
        android:hint="@string/description_hint"
        style="@android:style/Widget.EditText" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/create_goal"
        android:textSize="30sp"
        android:id="@+id/create_new_goal"
        android:layout_gravity="center"
        android:layout_marginTop="30dp"/>



</LinearLayout>