<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/list_title"
        android:textSize="45sp"
        android:layout_centerHorizontal="true"
        android:padding="20dp"
        android:id="@+id/my_goals_title"/>

    <ListView
        android:layout_width="match_parent"
        android:layout_height="700dp"
        android:padding="20dp"
        android:id="@android:id/list"
        android:layout_below="@+id/my_goals_title" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="400dp"
        android:layout_marginBottom="30dp"
        android:orientation="horizontal"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:id="@+id/lin">

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/home_button"
            android:text="@string/home_screen"
            android:textSize="30sp"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/new_goal"
            android:text="@string/new_goal"
            android:textSize="30sp"/>

    </LinearLayout>

</RelativeLayout>